# bigdata-storage-experiment-assignment-2024

./: README.md  result.out
I202120037/: README.md
I202120037/Course_Report/: CS2108_I202120037.docx  README.md
I202120037/Lab3/: README.md
U202014698/: README.md  课程报告.docx
U202014698/Lab0/: README.md
U202014698/Lab1/: README.md
U202014698/Lab2/: README.md
U202014698/Lab3/: README.md
U202110020/: README.md
U202110020/cuckoo-hash/: 大数据存储管理课程报告_武文博.docx
U202110020/cuckoo-hash/code/: CMakeLists.txt  Makefile
U202110020/cuckoo-hash/code/src/: better_cuckoo_hash_table.cpp  cuckoo_hash_table.cpp
U202110020/cuckoo-hash/code/test/: test.cpp
U202110020/lab1/: README.md
U202110020/lab2/: README.md
U202110020/lab2/asserts/rust-demo/: Cargo.toml
U202110020/lab2/asserts/rust-demo/src/: client.rs  main.rs  s3.rs
U202110020/lab3/: README.md
U202110415/: README.md
U202110415/Lab0/: README.md
U202110415/Lab1/: README.md
U202110415/Lab2/: README.md  num_clients.py  num_clients_local.py
U202110415/Lab3/: README.md
U202110415/课程实验/cuckoo/: .gitignore  CMakeLists.txt  battery.csv  formatResults.sh  rawResults.csv  results.md  test.sh
U202110415/课程实验/cuckoo/include/CuckooMap/: CuckooFilter.h  CuckooHelpers.h  CuckooMap.h  InternalCuckooMap.h  qdigest.h
U202110415/课程实验/cuckoo/tests/: CuckooFilterTest.cpp  PerformanceTest.cpp
U202111035/: README.md  config.h  cuckoohash  data.txt  makefile
U202111035/lab1/: README.md
U202111035/lab2/: README.md
U202111035/lab3/: README.md
U202111035/theory/: CS2104_史佳鑫_U202111035_大数据存储系统与管理报告.doc  README.md  cuckoohash  cuckoohash.c  data  data.c  functions.h  makefile
U202111248/: README.md
U202111248/Bloom-Filter/: 理论课课程报告.doc
U202111248/lab0/: README.md
U202111248/lab1/: README.md
U202111248/lab2/: README.md
U202111248/lab3/: README.md
U202112071/: README.md
U202112071/Lab0/: README.md
U202112071/Lab1/: README.md
U202112071/Lab2/: README.md
U202112071/Lab3/: README.md
U202112071/Lab_Curriculum_Design/: CuckooHash.cpp  U202112071+王彬.docx
U202112142/lab0/: README.md
U202113863/: README.md
U202113863/Lab0/: README.md
U202113863/Lab1/: README.md
U202113863/Lab2/: README.md
U202113863/Lab3/: README.md
U202113863/U202113863_陈柳伊_课程报告/: 大数据存储管理课程报告_陈柳伊.doc
U202114055/Cuckoo hash/: cuckoo2array.hpp  multiSlotCuckoo.hpp  test1.cpp  test2.cpp
U202114055/Lab0/: readme.md
U202114055/Lab1/: readme.md
U202114055/Lab2/: readme.md
U202114055/Lab3/: readme.md
U202114055/Lab3/assets/my_s3_benchmark/: Cargo.toml
U202114055/Lab3/assets/my_s3_benchmark/benches/: get.rs  put.rs
U202114055/Lab3/assets/my_s3_benchmark/src/: lib.rs
U202114055/U202114055庄景豪/: U202114055_庄景豪_理论课课程报告.docx
U202115306/: README.md
U202115306/Lab0/: README.md
U202115306/Lab1/: README.md
U202115306/Lab2/: README.md
U202115306/Lab3/: README.md
U202115306/U202115306陈栩民/: U202115306_陈栩民_理论课课程报告.doc
U202115319/: readme.md
U202115337/: README.md  U202115337_匡昱恒.docx
U202115339/: README.md
U202115354/: README.md  np.py
U202115388/: README.md
U202115396/: README.md
U202115421/: README.md  U202115421_邹扬_课程报告.docx
U202115434/: README.md  大数据存储管理课程报告.docx
U202115436/: README.md
U202115451/: README.md
U202115478/: README.md
U202115478/theory/asserts/cuckoo/: Cargo.toml
U202115478/theory/asserts/cuckoo/benches/: insert_bench.rs
U202115478/theory/asserts/cuckoo/src/: cuckoo.rs  lib.rs
U202115484/: README.md
U202115566/: README.md
U202115636/: README.md
U202115636/U202115636朱鑫材/code/: .gitignore  CMakeLists.txt  draw.ipynb  main.cpp  readme.md  run.py  run.sh
U202115636/U202115636朱鑫材/code/include/: block_cuckoo.h  cuckoo.h  data_generater.h  hash.h  init.h  stash_blocked_cuckoo.h  stash_cuckoo.h
U202115636/U202115636朱鑫材/code/src/: block_cuckoo.cpp  cuckoo.cpp  data_generater.cpp  stash_blocked_cuckoo.cpp  stash_cuckoo.cpp
U202115648/: README.md
U202115653/: README.md  大数据存储系统与管理.docx
U202115658/: README.md
U202115659/: README.md
U202115662/: README.md
U202115663/: README.md  U202115663_刘兴元_课程报告.docx
U202190067/: README.md
U202190074/: README.md
u202115380/: README.md
(+430 files in other folders)
