[package]
name = "rust-aws-demo"
version = "0.1.0"
authors = ["willburwwb"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
tokio = { version = "1", features = ["full"] }
aws-types = "1.1.8"
anyhow = "1.0.81"
clap = { version = "4.5.1", features = ["derive"] }
tracing = "0.1.40"
log = "0.4.21"
env_logger = "0.11.3"
