[package]
name = "cuckoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3.0", features = ["html_reports"] }


[[bench]]
name = "insert_bench"
harness = false

[profile.test]
# 设置测试时使用 release 模式
opt-level = 3
# 禁用调试信息
debug = false
